# recant

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  recant_client.py
agent/: investigator.py  readonly_sql.py
console/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
console/scripts/: gen-m3-tokens.mjs
console/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
db/: migrate.py
db/migrations/: 0001_schema.sql  0002_vector_index.sql  0003_row_ttl.sql  0004_cosine_vector_index.sql  0005_quarantine_action_flipped_ids.sql  0006_fanout_and_actions.sql
docs/: agent-skills-log.md  demo-script.md  mcp-setup.md  plan.md  skills-setup.md  spike-changefeeds.md
docs/plans/: 2026-07-02-week1.md  2026-07-03-week2.md  2026-07-10-week3.md
fanout/: consumer_entry.py  handler.py  lambda_entry.py  worker.py
fanout/iac/: deploy.sh  package.sh
fleet/: agents.py  bootstrap.py  embeddings.py  gateway.py  run.py  show.py  story.py
ops/: run-services.sh  scale_test.py
ops/chaos/: configure-gc.sh  docker-compose.yml  init.sh  kill-node.sh  reset.sh
ops/seed/: seed.py
services/attest_gateway/: app.py  chain.py  models.py  signer.py
services/common/: config.py  db.py  embedder.py  logging.py  vectors.py
services/forensics/: affidavit.py  app.py  archive.py  models.py
services/quarantine/: action.py  app.py  models.py
services/taint_engine/: engine.py
tests/integration/: conftest.py  test_attest_gateway.py  test_consumer_entry.py  test_fleet_eviction.py  test_forensics.py  test_recant.py
(+48 files in other folders)
